--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/thostetler/CloverNode",
   "dependencies": {
     "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "request": "^2.61.0"
   }
 }
